updated sqlite-jdbc and tuned JVM options